hphp/test/zend/bad/ext/intl/tests/bug62083.php
<?php
$arr1 = array();
var_dump(grapheme_extract(-1, -1, -1,-1, $arr1));